# DevOps-Capstone-Projects

./: .gitignore
Project 1/: .env.example  .eslintrc.js  .gitignore  .pnp.cjs  README.md  app-config.production.yaml  app-config.yaml  nexus-catalog-info.yaml  package.json  tsconfig.json
Project 10/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
Project 11/: LICENSE  README.md  docker-compose.yml  pom.xml
Project 2/: .env.example  .eslintrc.js  .gitignore  README.md  app-config.production.yaml  app-config.yaml  package.json  tsconfig.json  vv-catalog-info.yaml
Project 3/: .env.example  .eslintrc.js  .gitignore  README.md  app-config.production.yaml  app-config.yaml  mc-catalog-info.yaml  package-lock.json  package.json  tsconfig.json
Project 4/: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
Project 4/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
Project 4/backend/app/: main.py
Project 4/backend/app/api/v1/: router.py
Project 4/backend/app/api/v1/endpoints/: auth.py  health.py  projects.py  scans.py
Project 4/backend/app/core/: config.py  database.py  logging.py  security.py
Project 4/backend/app/models/: base.py  scan.py  user.py
Project 4/backend/app/schemas/: auth.py  project.py  scan.py
Project 4/backend/app/services/: auth_service.py  posture_service.py  scan_engine.py
Project 4/backend/app/utils/: dependencies.py
Project 4/backend/migrations/: env.py
Project 4/backend/migrations/versions/: 0001_initial_schema.py
Project 4/backend/tests/: test_scan_engine.py
Project 5/: .dockerignore  .formatter.exs  .gitignore  .tool-versions  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mix.exs
Project 6/: .gitignore  (+7 more)
(+878 files in other folders)
