[tool.poetry]
name = "shieldgrid-api"
version = "1.0.0"
description = "ShieldGrid Security Posture Management Platform - API Service"
authors = ["ShieldGrid Engineering <engineering@shieldgrid.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = { extras = ["email"], version = "^2.7.0" }
pydantic-settings = "^2.2.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.9"
aioredis = "^2.0.1"
celery = { extras = ["redis"], version = "^5.4.0" }
httpx = "^0.27.0"
boto3 = "^1.34.0"
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
tenacity = "^8.3.0"
python-slugify = "^8.0.4"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
faker = "^25.0.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
pre-commit = "^3.7.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = ["ENVIRONMENT=test"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
